--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-scroll": "^1.7.16",
+    "sweetalert2": "^9.8.2"
   },
   "scripts": {
     "predeploy": "npm run build",
