changed repo name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://btangsup.github.io/project5-reactApp",
-  "name": "project5",
+  "homepage": "https://btangsup.github.io/Music-TO-Event/",
+  "name": "project5-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
